feat(css): created the css

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Studion Events</title>
 </head>
 
 <body>
-    <nav>
-        <h1>Studi<span>on</span> <span>Eventos</span></h1>
-        <ul>
+    <nav class="navbar">
+        <h1 class="logo-studion">
+            Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
+        </h1>
+        <ul class="navbar__links">
             <li>
                 <a href="#empresa">
                     Empresa
