--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,16 @@
     <header>
         <div id="slider">
             <div class="slide">
-                <h6><span>Próximo evento</span> - Dia 25 de setembro ás 19h</h6>
-                <h2><span>Creative</span> Minds</h2>
-                <button>Saiba Mais</button>
+                <img 
+                    class="slide__background-image"
+                    src="./images/banner.jpg"
+                    alt="Studion Banner"
+                />
+                <div class="slide__copy">
+                    <h6><span class="copy--primary">Próximo evento</span> - Dia 25 de setembro ás 19h</h6>
+                    <h2><span class="copy--primary">Creative</span> Minds</h2>
+                    <button class="btn btn--slide">Saiba Mais</button>
+                </div>
             </div>
         </div>
     </header>
