--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <nav class="navbar">
+        <div class="container navbar__container">
         <h1 class="logo-studion">
             Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
         </h1>
@@ -41,6 +42,7 @@
                 </a>
             </li>
         </ul>
+        </div>
     </nav>
 
     <header>
@@ -61,26 +63,29 @@
     </header>
 
     <main>
-        <section id="eventos">
-            <ul>
+        <section id="counter">
+            <ul class="container counter__container">
                 <li>
-                    <h3>+ de 500 </h3>
-                    eventos realizados
+                    <h3>+ de 500 
+                        <small>eventos realizados</small>
+                    </h3>
                 </li>
                 <li>
-                    <h3>+ de 1.000.000 </h3>
-                    de ingressos vendidos
+                    <h3>+ de 1.000.000 
+                        <small>de ingressos vendidos</small>
+                    </h3>
                 </li>
                 <li>
-                    <h3>+ de 300 </h3>
-                    empresas atendidas
+                    <h3>+ de 300 
+                        <small>empresas atendidas</small>
+                    </h3>
                 </li>
             </ul>
         </section>
         
-        <section>
-            <div>
-                <img src="./images/institutional.jpg" />
+        <section class="container institutional">
+            <img class="institutional__image" src="./images/institutional.jpg" alt="Studio institutional"/>
+            <div class="institutional__copy">
                 <h6>Fazemos seu evento acontecer</h6>
                 <h4>Lorem ipsum, dolor sit amet cousectetur adipiscing elit.</h4>
                 <p>
@@ -89,7 +94,7 @@
                    quidem vel dolorem facilis enim tempora doloremque exercitationem
                    omnis reprehenderit velit.
                 </p>
-                <button>Saiba Mais</button>
+                <button class="btn btn--institutional">Saiba Mais</button>
             </div>
         </section>
 
