--- a/src/index.html
+++ b/src/index.html
@@ -111,19 +111,46 @@
         </section>
     </main>
 
-    <footer>
-        <h2>Studi<span>on</span> <span>Eventos</span></h2>
-        <form>
-            <label>receba news e promoções</label>
-            <input type="email" placeholder="email" />
-            <button type="submit">Enviar</button>
+    <footer class="footer">
+        <div class="container footer__container">
+        <h2 class="logo-studion">
+            Studi<span class="copy--primary">on</span> 
+            <span class="logo-studion__subtitle">Eventos</span></h2>
+        <form class="footer__form">
+            <label for="email">receba news e promoções</label>
+            <div class="footer__email">
+                <input id="email" type="email" placeholder="email" />
+                <button type="submit">
+                    <i class="fas fa-paper-plane fa-2x"></i>  
+                </button>
+            </div>
         </form>
-        <ul><a href="https://facebook.com/" target="_blank">Facebook</a></ul>
-        <ul><a href="https://twitter.com/" target="_blank">Twitter</a></ul>
-        <ul><a href="https://youtube.com/" target="_blank">Youtube</a></ul>
+        <ul class="footer__social">
+            <li>
+                <a href="https://facebook.com/" target="_blank">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://twitter.com/" target="_blank">
+                    <span class="fa-stack">
+                        <i class="fas fa-circle fa-stack-2x fa-inverse"></i>
+                        <i class="fab fa-twitter fa-stack-1x"></i>
+                    </span>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://youtube.com/" target="_blank">
+                <i class="far fa-play-circle fa-2x"></i>
+                </a>
+            </li>
+        </ul>
+        </div>
         <hr/>
         <p>
-            <small>Studi<span>ON</span> - Todos os direitos reservados</small>
+            <small>Studi<span class="copy--primary">ON</span> - Todos os direitos reservados</small>
         </p>
     </footer>
 </body>
