feat(contact): adding the contact page.

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a href="#contatos">
+                <a href="contact.html">
                     Contatos
                 </a>
             </li>
@@ -54,16 +54,18 @@
                     alt="Studion Banner"
                 />
                 <div class="slide__copy">
+                    <div class="slide__copy__container">
                     <h6><span class="copy--primary">Próximo evento</span> - Dia 25 de setembro ás 19h</h6>
                     <h2><span class="copy--primary">Creative</span> Minds</h2>
                     <button class="btn btn--slide">Saiba Mais</button>
+                </div>
                 </div>
             </div>
         </div>
     </header>
 
     <main>
-        <section id="counter">
+        <section id="counter" class="counter">
             <ul class="container counter__container">
                 <li>
                     <h3>+ de 500 
