feat(page events): adding events page

--- a/src/contact.html
+++ b/src/contact.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#eventos">
+                    <a href="events.html">
                         Eventos
                     </a>
                 </li>
@@ -49,7 +49,7 @@
 
     <header>
         <div class="hero">
-            <img src="./images/contact.jpg" alt="" class="herro__background">
+            <img src="./images/contact.jpg" alt="" class="hero__background">
             <div class="container hero__container">
                 <div class="hero__copy">
                     <h2>.contato</h2>
