--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </a>
             </li>
             <li>
-                <a href="#eventos">
+                <a href="events.html">
                     Eventos
                 </a>
             </li>
