feat(events): adjusting the page

--- a/src/events.html
+++ b/src/events.html
@@ -64,27 +64,38 @@
         <section class="list">
             <div class="container show__container">
                 <div class="show">
-                    <img src="./images/violao.jpg" alt="">
-                    <h3>Show Brazuca</h3>
-                    <span>
-                        <i class="fas fa-regular fa-clock"></i>
-                        12 de setembro às 20H
-                    </span>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
-                        tincidunt</p>
-                    <button>Comprar ingresso</button>
+                    <div class="columns__left">
+                        <img src="./images/violao.jpg" alt="">
+                    </div>
+                    <div class="columns__right">
+                        <h3>Show Brazuca</h3>
+                        <span>
+                            <i class="fas fa-regular fa-clock"></i>
+                            12 de setembro às 20H
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
+                            tincidunt
+                        </p>
+
+                        <button class="btn btn--list">Comprar ingresso</button>
+                    </div>
                 </div>
 
+
                 <div class="show">
-                    <img src="./images/balada.jpg" alt="">
-                    <h3>Show Brazuca</h3>
-                    <span>
-                        <i class="fa fa-regular fa-clock"></i>
-                        12 de setembro às 20H
-                    </span>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
-                        tincidunt</p>
-                    <button>Comprar ingresso</button>
+                    <div class="columns__left">
+                        <img src="./images/balada.jpg" alt="">
+                    </div>
+                    <div class="columns__right">
+                        <h3>Show Brazuca</h3>
+                        <span>
+                            <i class="fa fa-regular fa-clock"></i>
+                            12 de setembro às 20H
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
+                            tincidunt</p>
+                        <button class="btn btn--list">Comprar ingresso</button>
+                    </div>
                 </div>
 
                 <div class="show__arena">
@@ -117,15 +128,20 @@
                 </div>
 
                 <div class="show">
-                    <img src="./images/guitarra.jpg" alt="">
-                    <h3>Show Brazuca</h3>
-                    <span>
-                        <i class="fas fa-regular fa-clock"></i>
-                        12 de setembro às 20H
-                    </span>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
-                        tincidunt</p>
-                    <button>Comprar ingresso</button>
+                    <div class="columns__left">
+                        <img src="./images/guitarra.jpg" alt="">
+                    </div>
+                    <div class="columns__right">
+                        <h3>Show Brazuca</h3>
+                        <span>
+                            <i class="fas fa-regular fa-clock"></i>
+                            12 de setembro às 20H
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
+                            tincidunt
+                        </p>
+                        <button class="btn btn--list">Comprar ingresso</button>
+                    </div>
                 </div>
             </div>
         </section>
