feat(events): completed events page

--- a/src/events.html
+++ b/src/events.html
@@ -81,6 +81,7 @@
                     </div>
                 </div>
 
+                <hr>
 
                 <div class="show">
                     <div class="columns__left">
@@ -98,34 +99,49 @@
                     </div>
                 </div>
 
+                <hr>
+
                 <div class="show__arena">
-                    <img src="./images/pessoas.jpg" alt="">
-                    <h3>Show Brazuca</h3>
-                    <span>
-                        <i class="fas fa-regular fa-clock"></i>
-                        12 de setembro às 20H
-                    </span>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
-                        tincidunt</p>
-                    <button>Comprar ingresso</button>
+                    <div class="column__left">
+                        <img src="./images/pessoas.jpg" alt="">
+                    </div>
+                    <div class="column__right">
+                        <h3>Show Brazuca</h3>
+                        <span>
+                            <i class="fas fa-regular fa-clock"></i>
+                            12 de setembro às 20H
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam nonummy nibh euismod
+                            tincidunt
+                        </p>
+                        <button class="btn btn--list">Comprar ingresso</button>
 
-                    <p>Maecenas eros erat, tristique nec volutpat quis, lacinia lacinia diam. Pellentesque blandit velit
-                        at
-                        ante aliquet facilisis. Nam placerat egestas lectus eget consectetur. Proin sodales lobortis
-                        turpis
-                        et elementum. Donec commodo venenatis est a sodales. Mauris sed nisl consequat lectus mollis
-                        venenatis. In hac habitasse platea dictumst. Sed iaculis luctus porta. Donec feugiat
-                        sollicitudin
-                        justo, et scelerisque tellus sollicitudin a. Integer id ligula ut turpis molestie blandit.
-                    </p>
+                        <p class="show__info">Maecenas eros erat, tristique nec volutpat quis, lacinia lacinia diam.
+                            Pellentesque blandit
+                            velit
+                            at
+                            ante aliquet facilisis. Nam placerat egestas lectus eget consectetur. Proin sodales lobortis
+                            turpis
+                            et elementum. Donec commodo venenatis est a sodales. Mauris sed nisl consequat lectus mollis
+                            venenatis. In hac habitasse platea dictumst. Sed iaculis luctus porta. Donec feugiat
+                            sollicitudin
+                            justo, et scelerisque tellus sollicitudin a. Integer id ligula ut turpis molestie blandit.
+                        </p>
 
-                    <span class="show__location">
-                        <h4>Arena Showbusiness</h4>
-                        <i class="fas fa-map-marker-alt"></i>
-                        Rua Oswaldo Cruz nº 45 - SC 401 - Florianópolis / SC
-                    </span>
-                    <button>Como chegar</button>
+                        <span class="show__location">
+                            <form>
+                                <h4>Arena Showbusiness</h4>
+                                <i class="fas fa-map-marker-alt fa-3x"></i>
+                                <span>
+                                    Rua Oswaldo Cruz nº 45 - SC 401 - Florianópolis / SC
+                                </span>
+                            </form>
+                            <button class="btn btn--location">Como chegar</button>
+                        </span>
+                    </div>
                 </div>
+
+                <hr>
 
                 <div class="show">
                     <div class="columns__left">
