feat(adding page): adding gallery page

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 </a>
             </li>
             <li>
-                <a href="#galeria">
+                <a href="galeria.html">
                     Galeria
                 </a>
             </li>
