--- a/src/events.html
+++ b/src/events.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#galeria">
+                    <a href="galeria.html">
                         Galeria
                     </a>
                 </li>
