feat(javascript): adding slide

--- a/src/empresa.html
+++ b/src/empresa.html
@@ -5,21 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Studion Events</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container navbar__container">
             <h1 class="logo-studion">
-                <a href="index.html">
-                    Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
-                </a>
+                Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
             </h1>
             <ul class="navbar__links">
                 <li>
-                    <a href="empresa.html">
+                    <a class="active" href="empresa.html">
                         Empresa
                     </a>
                 </li>
@@ -39,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="active" href="contact.html">
+                    <a href="contact.html">
                         Contatos
                     </a>
                 </li>
@@ -48,69 +46,46 @@
     </nav>
 
     <header>
-        <div class="hero">
-            <img src="./images/contact.jpg" alt="" class="hero__background">
-            <div class="container hero__container">
-                <div class="hero__copy">
-                    <h2>.contato</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste nobis deserunt natus illo minima!
-                        Assumenda accusanus repellat sequi natus laborum saepe suscipit, aspernatur error rem.
-                        Reiciendis officiis autem facere eveniet.</p>
-                </div>
-            </div>
+        <img src="./images/enterprise.jpg" alt="enterprise">
+
+        <div>
+            <h2>.empresa</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+                condimentum. Aliquam nonummy auctor massa
+            </p>
         </div>
     </header>
 
     <main>
-        <section class="contact">
+        <section>
+            <div>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua.
+                </p>
 
+                <span>
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate.
+                </span>
+            </div>
 
-            <section class="contact__info">
-                <div class="contact__info__container">
-                    <h3>Ligue pra gente</h3>
-                    <span>
-                        <i class="fas fa-phone fa-flip-horizontal"></i>
-                        +55 48 3223 - 5769
-                    </span>
-                    <span>
-                        <i class="fab fa-whatsapp"></i>
-                        +55 48 0043 - 7777
-                    </span>
-                    <h3>Venha conhecer a nossa casa</h3>
-                    <span>
-                        <i class="fas fa-map-marker-alt"></i>
-                        Rua Miguel Daux, 129 - Coqueiros Florianópolis / SC
-                    </span>
-                </div>
-            </section>
-
-
-            <section class="contact__form">
-                <form class="contact__form__container" action="">
-                    <h3>Deixe sua mensagem</h3>
-                    <label for="name">Seu nome</label>
-                    <input type="name" type="text" />
-                    <label for="email">Seu email</label>
-                    <input type="email" type="email" />
-                    <label for="massage">Seu mensagem</label>
-                    <input type="message" type="text" />
-                    <button class="btn btn--contact" tyoe="submit">Enviar</button>
-                </form>
-            </section>
+            <img src="./images/man.png" alt="Man">
+            <img src="./images/quadrado.png" alt="Molde">
+            <img src="./images/quadrado.png" alt="Molde">
+            <img src="./images/quadrado.jpg" alt="Forma">
         </section>
+            
+        <section>
+            <h4>Quem Confia no nosso trabalho</h4>
+            <img src="./images/logos.png" alt="Logos">
 
-
-        <section class="maps">
-
-            <iframe 
-                width="100%" 
-                src="https://maps.google.com/maps?q=Rua Miguel Daux, 129 - Coqueiros Florianópolis / SC&t=&z=12&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" 
-                scrolling="no" 
-                marginheight="0" 
-                marginwidth="0">
-            </iframe>
-
+        </section>
+        
+        <section>
+            <iframe href="https://www.youtube.com/watch?v=ez1iu-zx7eE"></iframe>
         </section>
 
     </main>
