--- a/src/events.html
+++ b/src/events.html
@@ -19,7 +19,7 @@
             </h1>
             <ul class="navbar__links">
                 <li>
-                    <a href="#empresa">
+                    <a href="empresa.html">
                         Empresa
                     </a>
                 </li>
