--- a/src/galeria.html
+++ b/src/galeria.html
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="color">
         <section class="container section__container">
             <div class="galeria__images">
 
