--- a/src/empresa.html
+++ b/src/empresa.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#depoimentos">
+                    <a href="depoimentos.html">
                         Depoimentos
                     </a>
                 </li>
