--- a/src/galeria.html
+++ b/src/galeria.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#depoimentos">
+                    <a href="depoimentos.html">
                         Depoimentos
                     </a>
                 </li>
