feat(adjusting): adjusting page

--- a/src/depoimentos.html
+++ b/src/depoimentos.html
@@ -64,10 +64,10 @@
 
         <main>
             <section>
-                <div class="slider">
-                    <div class="slide">
+                <div class="slider__dep">
+                    <div class="slide__dep">
                         <img   
-                         class="slide__background-image"
+                         class="slide__background-image-dep"
                          src="./images/dep_one.jpg"
                          alt="depoimentos"
                          />
@@ -90,9 +90,9 @@
                         </div>
                     </div>
                 
-                    <div class="slide">
+                    <div class="slide__dep">
                         <img   
-                        class="slide__background-image"
+                        class="slide__background-image-dep"
                         src="./images/dep_two.jpg"
                         alt="depoimentos"
                         />
@@ -115,9 +115,9 @@
                         </div>
                     </div>
 
-                    <div class="slide">
+                    <div class="slide__dep">
                         <img   
-                        class="slide__background-image"
+                        class="slide__background-image-dep"
                         src="./images/dep_three.jpg"
                         alt="depoimentos"
                         />
