--- a/src/empresa.html
+++ b/src/empresa.html
@@ -13,7 +13,9 @@
     <nav class="navbar">
         <div class="container navbar__container">
             <h1 class="logo-studion">
-                Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
+                <a href="index.html">
+                    Studi<span class="copy--primary">on</span> <span class="logo-studion__subtitle">Eventos</span>
+                </a>
             </h1>
             <ul class="navbar__links">
                 <li>
